# dlog

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: publish_cargo.yaml  publish_nodejs.yaml  publish_python.yaml
dlog-rs/: Cargo.toml
dlog-rs/src/: lib.rs  logger.rs
dlog_core/: Cargo.toml  README.md
dlog_core/src/: backlog.rs  ingest.rs  ingestor.rs  lib.rs  models.rs  worker.rs
dlog_core/src/transforms/: console.rs  credit_card.rs  email.rs  mod.rs
dlog_nodejs/: .gitignore  README.md  package-lock.json  package.json
dlog_nodejs/example/: index.js
dlog_nodejs/lib/: index.d.ts  index.js
dlog_nodejs/native/: Cargo.toml  build.rs
dlog_nodejs/native/src/: extractor.rs  lib.rs
dlog_py/: Cargo.toml  Dockerfile  README.md
dlog_py/cross/: Dockerfile
dlog_py/dlog_py/: library.py
dlog_py/example/: main.py
dlog_py/src/: lib.rs
dlog_rs/: Cargo.toml  README.md
dlog_rs/example/: Cargo.toml
dlog_rs/example/src/: main.rs
dlog_rs/src/: lib.rs  logger.rs
native/: Cargo.toml
native/src/: ingestor.rs  lib.rs  models.rs
nodejs/: README.md  package-lock.json  package.json
nodejs/lib/: index.d.ts  index.js
nodejs/native/: Cargo.toml  build.rs
nodejs/native/src/: extractor.rs  lib.rs
python/: Cargo.toml  README.md  pyproject.toml  setup.py
python/dlog/: library.py
python/dlog_python/: __init__.py  library.py
python/example/: main.py
python/src/: lib.rs
