[package]
name = "dlog_core"
version = "1.1.7"
authors = ["Lennart Voorgang <lennart@voorgang.dev>"]
edition = "2021"
license = "MIT"
description = "Core library for the dlog logging platform"
homepage = "https://app.dlog.cloud"
repository = "https://github.com/lennartvrg/dlog"
readme = "README.md"

[dependencies]
regex = "1.5.4"
futures = { version = "0.3.19", default-features = false }
serde_json = { version = "1.0.78", default-features = false }
directories = { version = "4.0.1", default-features = false }
static_init = { version = "1.0.2", default-features = false }
tokio = { version = "1.16.1", default-features = false, features = ["time", "macros"] }
flume = { version = "0.10.10", default-features = false, features = ["async"] }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.11.9", default-features = false, features = ["json", "blocking", "rustls-tls"] }
