[package]
name = "dlog_core"
version = "1.1.8"
authors = ["Lennart Voorgang <lennart@voorgang.dev>"]
edition = "2021"
license = "MIT"
description = "Core library for the dlog logging platform"
homepage = "https://app.dlog.cloud"
repository = "https://github.com/lennartvrg/dlog"
readme = "README.md"

[dependencies]
regex = "1.6.0"
futures = { version = "0.3.24", default-features = false }
serde_json = { version = "1.0.85", default-features = false }
directories = { version = "4.0.1", default-features = false }
static_init = { version = "1.0.3", default-features = false }
tokio = { version = "1.21.0", default-features = false, features = ["time", "macros"] }
flume = { version = "0.10.14", default-features = false, features = ["async"] }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
time = { version = "0.3.14", default-features = false, features = ["std", "serde", "serde-well-known", "macros", "formatting"] }
reqwest = { version = "0.11.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
