[package]
name = "dlog_py"
version = "1.1.5"
authors = ["Lennart Voorgang <lennart@voorgang.dev>"]
edition = "2018"

readme = "README.md"
description = "Python adapter for the dlog logging platform"
homepage = "https://github.com/lennartvrg/dlog/python"
repository = "https://github.com/lennartvrg/dlog/python"
documentation = "https://github.com/lennartvrg/dlog/python"

[lib]
name = "dlog_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }

dlog_core = { version = "1.1.5", path = "../dlog_core" }

[package.metadata.maturin]
name = "dlog_py"
requires-python = ">=3.6"
description-content-type = "text/markdown"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Logging"
]
