[package]
name = "native"
version = "0.1.0"
authors = ["Lennart Voorgang <lennart@voorgang.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.2"
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"]}
reqwest = { version = "0.11.2", features = ["json", "blocking"] }
