[package]
name = "native"
version = "0.2.1"
authors = ["Lennart Voorgang <lennart@voorgang.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = { version = "0.10.2", default-features = false }
serde_json = { version = "1.0.64", default-features = false }
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0.125", default-features = false, features = ["derive"]}
reqwest = { version = "0.11.2", default-features = false, features = ["json", "blocking", "rustls-tls"] }
