[package]
name = "python"
version = "0.1.7"
authors = ["Lennart Voorgang <lennart@voorgang.dev>"]
edition = "2018"
readme = "README.md"

[lib]
name = "dlog_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }

native = { path = "../native"}

[package.metadata.maturin]
name = "dlog_python"
requires-python = ">=3.8"