[package]
name = "python"
version = "0.1.9"
authors = ["Lennart Voorgang <lennart@voorgang.dev>"]
edition = "2018"

readme = "README.md"
description = "Python adapter for the dlog logging platform"
homepage = "https://github.com/lennartvrg/dlog/python"
repository = "https://github.com/lennartvrg/dlog/python"
documentation = "https://github.com/lennartvrg/dlog/python"

[lib]
name = "dlog_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }

native = { path = "../native"}

[package.metadata.maturin]
name = "dlog_python"
requires-python = ">=3.8"
description-content-type = "text/markdown"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Logging",
    "Topic :: System :: Networking :: Monitoring"
]