[package]
name = "dlog_nodejs"
version = "1.1.8"
authors = ["Lennart Voorgang <lennart@voorgang.dev>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "dlog_nodejs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = { version = "0.10.1", default-features = false, features = ["napi-4"] }
serde = { version = "1.0.144", default-features = false }
once_cell = { version = "1.14.0", default-features = false }
serde_json = { version = "1.0.85", default-features = false }

dlog_core = { version = "1.1.8", path = "../../dlog_core" }
