[package]
name = "dlog-nodejs"
version = "0.2.2"
authors = ["Lennart Voorgang <lennart@voorgang.dev>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "dlog"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.0"

[dependencies]
neon = { version = "0.8.0", default-features = false, features = ["napi-4"] }
serde = { version = "1.0.125", default-features = false }
once_cell = { version = "1.7.2", default-features = false }
serde_json = { version = "1.0.64", default-features = false }

native = { path = "../../native" }